# kki_util

./: CMakeLists.txt  main.cpp  string.h  util.h
include/kki/: random.h  string.h
